# nthlayer-observe

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: p5-generate-cleanup-plan.md
src/nthlayer_observe/: __init__.py  __main__.py  assessment.py  cli.py  config.py  decision_records.py  explanation.py  incident.py  sqlite_store.py  store.py
src/nthlayer_observe/api/: __init__.py
src/nthlayer_observe/db/: __init__.py
src/nthlayer_observe/dependencies/: __init__.py  discovery.py
src/nthlayer_observe/dependencies/providers/: base.py  (+7 more)
src/nthlayer_observe/deployments/: __init__.py
src/nthlayer_observe/discovery/: __init__.py  classifier.py  client.py  models.py
src/nthlayer_observe/drift/: __init__.py  analyzer.py  models.py  patterns.py
src/nthlayer_observe/gate/: __init__.py  conditions.py  correlator.py  evaluator.py  policies.py
src/nthlayer_observe/portfolio/: __init__.py  aggregator.py  scorer.py
src/nthlayer_observe/slo/: __init__.py  collector.py  spec_loader.py
src/nthlayer_observe/verification/: __init__.py  exporter_guidance.py  extractor.py  models.py  verifier.py
tests/: test_assessment.py  test_cli.py  test_cli_decision_records.py  test_collect_cli.py  test_decision_records.py  test_dependencies.py  test_discovery.py  test_drift.py  test_explanation.py  test_gate_correlator.py  test_gate_evaluator.py  test_gate_policies.py  test_incident.py  test_portfolio.py  test_slo_collector.py  test_slo_spec_loader.py  test_sqlite_concurrency.py  test_store.py  test_verification.py  test_verify_cli.py
